--- a/css/style.css
+++ b/css/style.css
@@ -17,21 +17,30 @@ body * {
 }
 
 header {
-  display: flex;
-  justify-content: center;
+  margin: 32px auto;
+  height: 120px;
 }
 
 header div {
-  margin: 32px auto;
+  width: 120px;
+
+  margin: auto;
+  padding: 4px;
+
   background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
   border-radius: 50%;
 
-  width: 128px;
-  height: 128px;
+  display: flex;
+
+  transition: transform 0.3s;
 }
 
-header img {
-  width: 93.75%;
+header div:hover {
+  transform: scale(1.1);
+}
+
+header div img {
+  width: 100%;
   border-radius: 50%;
 }
 
@@ -83,6 +92,14 @@ section ul {
   gap: 16px;
 }
 
+section ul li {
+  transition: transform 0.3s;
+}
+
+section ul li:hover {
+  transform: scale(1.1);
+}
+
 /* Ajustes de Imagens */
 
 .game-list img {
@@ -91,6 +108,7 @@ section ul {
 }
 
 .channel-list img {
+  border: 1px solid #443E54;
   border-radius: 50%;
   max-width: 70px;
 }
@@ -98,4 +116,52 @@ section ul {
 .social-medias svg {
   width: 32px;
   height: 32px;
+}
+
+
+
+/* Animations */
+
+header div {
+  animation: fromTop 0.7s 0.2s backwards;
+}
+
+main section {
+  animation: fromBottom 0.7s backwards;
+}
+
+main section:nth-child(1) {
+  animation-delay: 0;
+}
+
+main section:nth-child(2) {
+  animation-delay: 0.4s;
+}
+
+main section:nth-child(3) {
+  animation-delay: 0.8s;
+}
+
+@keyframes fromTop {
+  from {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fromBottom {
+  from {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
